# latest-version

./: .gitignore  Cargo.toml  Makefile  Makefile.toml  README.md
.github/workflows/: checks.yml  releases.yml
src/: main.rs  opts.rs  versions.rs
