[package]
name = "latest-version"
version = "0.1.3-alpha.0"
description = "Check deps.dev for the latest version of artifacts"
homepage = "https://github.com/knutwalker/latest-version/"
repository = "https://github.com/knutwalker/latest-version/"
categories = ["command-line-utilities"]
keywords = ["latest", "version", "dependencies", "maven", "deps-dot-dev"]
authors = ["Paul Horn <developer@knutwalker.de>"]
license = "MIT OR Apache-2.0"
edition = "2018"
resolver = "2"

[dependencies]
clap = { version = "4.0.27", default-features = false, features = [
    "color",
    "std",
    "error-context",
] }
color-eyre = { version = "0.6.2", default-features = false }
console = { version = "0.15.2", default-features = false }
lenient_semver = "0.4.2"
reqwest = { version = "0.11.12", default-features = false, features = [
    "gzip",
    "rustls-tls",
    "json",
] }
semver = "1.0.14"
serde_json = "1.0.87"
tokio = { version = "1.21.2", features = ["rt", "io-std"] }

[dev-dependencies]
test-case = "2.2.2"

[profile.dev.package.backtrace]
opt-level = 3

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
lto = true
opt-level = 2
rpath = false
